2004-07-23 Mikhail Khodjaiants
	More informative error messages.
	* CDebugUIMessages.properties
	* CDTDebugModelPresentation.java

2004-07-20 Mikhail Khodjaiants
	Cleanup.
	* ErrorStatusHandler.java
	* InfoStatusHandler.java
	* QuestionStatusHandler.java

2004-07-16 Mikhail Khodjaiants
	Cleanup.
	* CDTDebugModelPresentation.java

2004-07-15 Mikhail Khodjaiants
	Fix for bug 70147. TVT3.0: Preferences CDT Editor has non-externalized string.
	* plugin.properties
	* plugin.xml

2004-07-15 Tanya Wolff
	Fix for bug 69939. I18N: Memory view contains unexternalized strings.
	Externalized Memory View Refresh menu item.
	* RefreshMemoryAction.java
	* ActionMessages.properties
	
2004-07-09 Mikhail Khodjaiants
	Renamed "ICDebugElementErrorStatus" to "ICDebugElementStatus".
	* CDTDebugModelPresentation.java

2004-07-09 Mikhail Khodjaiants
	Fix for bug 69221: "Show full paths" doesn't work for shared libraries.
	* SharedLibrariesView.java

2004-06-29 Mikhail Khodjaiants
	Temporary fix for bug 68915: Invalid values in the Variables view.
	* CDebugUIPlugin.java

2004-06-22 Mikhail Khodjaiants
	Replaced global resource bundles by messages.

2004-06-21 Mikhail Khodjaiants
	Added transparency to the icons.
	* icons/full/cview16/signals_view.gif
	* icons/full/eview16/signals_view.gif

2004-06-21 Mikhail Khodjaiants
	String externalization.

2004-06-16 Mikhail Khodjaiants
	Deleted the "C/C++ Debugger Appearance" theme.
	Moved the diassembly color preferences to the "C/C++ Debug" preference page.
	* plugin.xml
	* IInternalCDebugUIConstants.java
	* CDebugPreferencePage.java
	* PreferenceMessages.properties: new
	* PreferenceMessages.java: new

2004-06-16 Mikhail Khodjaiants
	Moved the disassembly font definition to the platform "Debug" theme.
	* plugin.xml

2004-06-16 Mikhail Khodjaiants
	Added support for the "Skip Breakpoints" and "Skip breakpoints during a "Run To Line" operation.
	* RunToLineAdapter.java

2004-06-16 Mikhail Khodjaiants